<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ic_home"
            android:icon="@drawable/ic_home_rv"
            android:title="@string/home"
            />

        <item
            android:id="@+id/ic_horario"
            android:icon="@drawable/ic_horario"
            android:title="@string/horario"
            android:onClick="calendar"/>

        <item
            android:id="@+id/ic_estadisticas"
            android:icon="@drawable/ic_stats"
            android:title="@string/estad_sticas" />

        <item
            android:id="@+id/ic_ajustes"
            android:icon="@drawable/ic_settings"
            android:title="@string/ajustes" />

        <item
            android:id="@+id/ic_reiniciar_progreso"
            android:icon="@drawable/ic_settings_backup_restore"
            android:title="@string/reiniciar_progreso" />
    </group>
</menu>