<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WebImplicitIntentActivity">

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@string/web_aqui"
        android:text="@string/web_aqui"
        app:layout_constraintBottom_toTopOf="@+id/btnNavegar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnNavegar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="105dp"
        android:onClick="openWebsite"
        android:text="Navegar"
        app:layout_constraintBottom_toTopOf="@+id/btnMapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="70dp"
        android:onClick="shareText"
        android:text="Comparte"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="11dp"
        android:onClick="openMap"
        android:text="Donde estoy?"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="253dp"
        android:layout_height="42dp"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="13dp"
        android:text="@string/compartirweb"
        app:layout_constraintBottom_toTopOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="256dp"
        android:layout_height="35dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="13dp"
        android:text="@string/compartirmsg"
        app:layout_constraintBottom_toTopOf="@+id/txtCompartir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="126dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="79dp"
        android:text="@string/compartirloc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>